--- a/Rules
+++ b/Rules
@@ -15,13 +15,13 @@
 #
 # * Files located in /static/ are special, the extension is not auto stripped
 
-compile '/clinic_info/downloads/*/', :rep => :thumbnail do
-  filter :thumbnailize, :width => 42, :default => @items['/static/imgs/pdf_thumbnail.jpg']
-end
+#compile '/clinic_info/downloads/*/', :rep => :thumbnail do
+#  filter :thumbnailize, :width => 42, :default => @items['/static/imgs/pdf_thumbnail.jpg']
+#end
 
-route '/clinic_info/downloads/*/', :rep => :thumbnail do
-  item.identifier.chop + '-thumbnail.png'
-end
+#route '/clinic_info/downloads/*/', :rep => :thumbnail do
+#  item.identifier.chop + '-thumbnail.png'
+#end
 
 passthrough '/static/*'
 
