--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -1,3 +1,7 @@
+redirects:
+  - /get_involved/gala2016:
+    - /gala2016
+
 # A list of file extensions that nanoc will consider to be textual rather than
 # binary. If an item with an extension not in this list is found,  the file
 # will be considered as binary.
