--- a/Rules
+++ b/Rules
@@ -23,7 +23,7 @@
 #  item.identifier.chop + '-thumbnail.png'
 #end
 
-compile '/content/test.txt' do
+compile '*/test.txt' do
   filter :vanco_url
 end
 
