--- a/Rules
+++ b/Rules
@@ -23,7 +23,7 @@
 #  item.identifier.chop + '-thumbnail.png'
 #end
 
-compile '/static/test/' do
+compile '/static/test/*/' do
   filter :vanco_url
 end
 
