--- a/Rules
+++ b/Rules
@@ -23,8 +23,9 @@
 #  item.identifier.chop + '-thumbnail.png'
 #end
 
-compile '/static/test/*' do
+compile '/static/test/' do
   filter :vanco_url
+  layout 'default'
 end
 
 route '/static/test/' do
